fix: slider overflow

--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@ header {
   height: 100%;
   display: block;
   position: absolute;
+  overflow: hidden;
+  
   transition: all 0.35s linear;
   animation-duration: 0.35s;
   animation-iteration-count: 1;
